# edge-ai-suites

./: .gitmodules  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  (+1 more)
metro-ai-suite/holographic-sensor-fusion/: CMakeLists.txt  README.md  README_Ubuntu22_BKC.md  compile.py  env.sh  how_to_get_RADDet_datasets.md  install_driver_related_libs.sh  install_project_related_libs.sh  profiling.py  run_service_bare.sh  run_service_bare_log.sh
metro-ai-suite/holographic-sensor-fusion/ai_inference/: README.md
metro-ai-suite/holographic-sensor-fusion/ai_inference/deployment/datasets/: RadarConfig.json  RadarConfig_30.json  RadarConfig_raddet_oscfar.json  radarResults.csv
metro-ai-suite/holographic-sensor-fusion/ai_inference/deployment/models/: compile_for_kmb.conf  how_to_create_detection_model_proc_file.md
metro-ai-suite/holographic-sensor-fusion/ai_inference/include/common/: base64.hpp  common.hpp  context.h  frame_wrapper.h  image_info.h  logger.hpp  memory_type.h  processor_types.h  region_of_interest.h
metro-ai-suite/holographic-sensor-fusion/ai_inference/include/inference_nodes/: ClassificationNode.hpp  FeatureExtractionNode.hpp  ObjectQualityNode.hpp
metro-ai-suite/holographic-sensor-fusion/ai_inference/include/low_latency_client/: grpcClient.hpp  lowLatencyClient.hpp
metro-ai-suite/holographic-sensor-fusion/ai_inference/include/low_latency_server/: pipelineManager.hpp
metro-ai-suite/holographic-sensor-fusion/ai_inference/include/modules/: quality.hpp  tracker.hpp
metro-ai-suite/holographic-sensor-fusion/ai_inference/include/nodes/: radarDatabaseMeta.hpp
metro-ai-suite/holographic-sensor-fusion/ai_inference/inference_backend/image_inference/: image_inference.cpp
metro-ai-suite/holographic-sensor-fusion/ai_inference/inference_backend/pre_proc/: pre_proc.cpp
metro-ai-suite/holographic-sensor-fusion/ai_inference/source/inference_nodes/: ClassificationNode.cpp  FeatureExtractionNode.cpp
metro-ai-suite/holographic-sensor-fusion/ai_inference/source/low_latency_server/: README.md
metro-ai-suite/holographic-sensor-fusion/ai_inference/source/modules/: quality.cpp  tracker.cpp  tracklet_wrap.cpp
metro-ai-suite/holographic-sensor-fusion/ai_inference/test/: CRSensorFusion16C4RDisplay.cpp  CRSensorFusion2C1RDisplay.cpp  CRSensorFusion4C4RDisplay.cpp  CRSensorFusion4C4RDisplayCrossStream.cpp  MediaDisplay.cpp  media_uri_image.list  testAiNode.cpp  testFusionPipeline.cpp  testGRPC2C1RPipeline.cpp  testGRPCLocalPipeline_pred.cpp  testMultiStreamAiPipeline.cpp  testRadarClusteringTrackingNode.cpp  testRadarPerformance.cpp
metro-ai-suite/holographic-sensor-fusion/ai_inference/test/configs/: cpuLocalImageAiPipeline-custom-pp.json  cpuLocalVideoAiPipeline.json  gpuLocalImageAiPipeline.json  gpuLocalVPLDecodeImagePipeline.json  gpuLocalVPLDecodeSensorImagePipeline_csc.json  gpuLocalVideoAiPipeline.json  gpuStrucPipeline.json  gpuVideoH264StrucPipeline.json
metro-ai-suite/holographic-sensor-fusion/ai_inference/test/demo/: road_barrier_1920_1080.h264
metro-ai-suite/holographic-sensor-fusion/ai_inference/testNodes/: FileSourceTestNode.cpp
metro-ai-suite/holographic-sensor-fusion/cmake/: FindGlib.cmake  FindGstreamer.cmake  Finduv.cmake
metro-ai-suite/holographic-sensor-fusion/deployments/benchmark_tools/: How_to_run_accuracy_benchmark.md  accuracy_benchmark.py  prepare_data_run_benchmark.sh  read_GT_plot_multiple.py  read_tracking_results_plot_multiple.py  select_raddet_data.py  split_images.py
metro-ai-suite/holographic-sensor-fusion/deployments/how_to_support_yolov6_model/: how_to_support_yolov6_model.md
metro-ai-suite/holographic-sensor-fusion/deployments/model_evaluation_tools/: evaluation.py  requirements.txt
metro-ai-suite/holographic-sensor-fusion/deployments/raddet_tools/: image2bin.py  requirements.txt  select_raddet.py
metro-ai-suite/holographic-sensor-fusion/docker/: Dockerfile_TFCC.dockerfile
metro-ai-suite/holographic-sensor-fusion/docs/user-guide/: APIs.md  Advanced-User-Guide.md  Get-Started-Guide.md
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/: CMakeLists.txt  InferenceServiceAPIDesign.md
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/deployment/: README.md
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/deployment/datasets/: RadarConfig_raddet.json
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/deployment/models/: how_to_create_classification_model_proc_file.md
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/include/common/: input_model_preproc.h  memory_mapper.h  pre_processors.h  restfulMessage.hpp  tensor.h
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/inference_backend/: CMakeLists.txt
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/test/: CMakeLists.txt  CRSensorFusionDisplay.cpp  CRSensorFusionRadarDisplay.cpp  gtestPipeline.cpp  media_uri_video.list  testFusionPerformance.cpp  testGRPC16C4RPipeline.cpp  testGRPC4C4RPipeline.cpp  testGRPC4C4RPipelineCrossStream.cpp  testGRPCLocalPipeline.cpp  testLocalPipeline.cpp  testMultiStreamFusionPipeline.cpp  testQueryPipeline.cpp  testStrucPipeline.cpp  testUtils.hpp
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/testNodes/: CMakeLists.txt  FileSourceTestNode.hpp
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/utils/: CMakeLists.txt  utils.cpp  utils.h
metro-ai-suite/video-processing-for-nvr/svet_app/: CMakeLists.txt
metro-ai-suite/video-processing-for-nvr/svet_app/include/: config_parser.h  decode.h  display_device.h  display_stream.h  osd.h  postprocess.h  sample_queue.h  svet_util.h  video_pipeline.h
metro-ai-suite/video-processing-for-nvr/svet_app/src/: config_parser.cpp  display_stream.cpp  osd.cpp  svet_app.cpp  video_pipeline.cpp
metro-ai-suite/video-processing-for-nvr/svet_app/test/: CMakeLists.txt
metro-ai-suite/video-processing-for-nvr/svet_app/tool/: CMakeLists.txt  config_gen.cpp  run.sh
metro-ai-suite/video-processing-platform-sdk-sample/svet_app/rtsp/: CMakeLists.txt
(+1382 files in other folders)
